# libsnd

./: .editorconfig  .gitignore  CHANGELOG.md  CMakeLists.txt  CPPLINT.cfg  Doxyfile  Makefile.am  README.md  configure.ac  libsnd-config.cmake.in  snd.h  uninstall.sh
docs/: README.md  denormal.md  interpolation.md
docs/oscillators/: sine.md
examples/: README.md  sine.cc
examples/fm_synth/: fm_synth.cc
examples/midi/: midi.cc
examples/midi_in/: midi.cc
examples/sine/: sine.cc
examples/wavefolder/: wavefolder.cc
include/: approx.h  approx.hh  bilinear.h  bilinear.hh  conversion.h  conversion.hh  denormal.h  denormal.hh  envelope.h  envelope.hh  interpolation.h  lfo.h  lfo.hh  saturator.h  sawtooth.h  sawtooth.hh  sine.h  sine.hh  snd.h  triangle.h  triangle.hh  utils.h  waveshaper.h
source/: approx.cc  approx.cpp  bilinear.cpp  conversion.cc  conversion.cpp  denormal.cpp  envelope.cc  envelope.cpp  interpolation.cpp  lfo.cc  lfo.cpp  saturator.cpp  sawtooth.cc  sawtooth.cpp  sine.cc  sine.cpp  utils.cpp  waveshaper.cpp
src/: Makefile.am  denormal.cc  denormal.hh  envelope.cc  envelope.hh  interpolation.cc  interpolation.hh  sine.cc  sine.hh
test/: CmakeLists.txt  Makefile.am  approx.cpp  bilinear.cpp  conversion.cpp  denormal.cpp  interpolation.cpp  lfo.cpp  main.cpp  saturator.cpp  sine.cpp  unit.test  utils.cpp
tests/: catch.hpp  test.cc  test.cpp
