# The libraries to build
# noinst_LIBRARIES = libsnd.a
lib_LIBRARIES = libsnd.a
include_HEADERS = ../snd.h

AM_CXXFLAGS = -Wall -std=c++11

# The files to add to the library and to the source distribution
# $(libsnd_a_HEADERS)
libsnd_a_SOURCES = \
  denormal.hh \
  denormal.cc \
  sine.hh \
  sine.cc \
  envelope.hh \
  envelope.cc
